--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/bus
 spring.datasource.username=root
 spring.datasource.password=1234@abc
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 server.port=8082
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+spring.session.jdbc.initialize-schema=always
 
